[gd_scene load_steps=7 format=3 uid="uid://dvovrkvk6myik"]

[ext_resource type="Script" uid="uid://nw4e6ylsw42u" path="res://scripts/planet_button.gd" id="1_iua4j"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_iua4j"]
bg_color = Color(1, 0.6350498, 1, 0)
corner_radius_top_left = 32
corner_radius_top_right = 32
corner_radius_bottom_right = 32
corner_radius_bottom_left = 32

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yawvn"]
bg_color = Color(1, 0.6350498, 1, 0.006)
corner_radius_top_left = 32
corner_radius_top_right = 32
corner_radius_bottom_right = 32
corner_radius_bottom_left = 32

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0vmec"]
bg_color = Color(1, 0.6350498, 1, 0.004)
corner_radius_top_left = 32
corner_radius_top_right = 32
corner_radius_bottom_right = 32
corner_radius_bottom_left = 32

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ndcpa"]
bg_color = Color(1, 0.6350498, 1, 0)
corner_radius_top_left = 32
corner_radius_top_right = 32
corner_radius_bottom_right = 32
corner_radius_bottom_left = 32

[sub_resource type="LabelSettings" id="LabelSettings_yawvn"]
font_size = 13

[node name="planet_button" type="Button"]
custom_minimum_size = Vector2(128, 128)
offset_left = -64.0
offset_top = -64.0
offset_right = 64.0
offset_bottom = 64.0
pivot_offset = Vector2(64, 64)
theme_override_styles/normal = SubResource("StyleBoxFlat_iua4j")
theme_override_styles/pressed = SubResource("StyleBoxFlat_yawvn")
theme_override_styles/hover = SubResource("StyleBoxFlat_0vmec")
theme_override_styles/focus = SubResource("StyleBoxFlat_ndcpa")
script = ExtResource("1_iua4j")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -64.0
offset_right = 64.0
offset_bottom = 32.0
grow_horizontal = 2
text = "S E T T I N G"
label_settings = SubResource("LabelSettings_yawvn")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
